[package]

name = "SuperMegaTag"
version = "0.0.1"
authors = ["Tony Aldridge <tony@angry-lawyer.com>"]

[[bin]]

name = "supermegatag"
path = "src/client.rs"

[[bin]]

name = "supermegatag_server"
path = "src/server.rs"

[dependencies.event]
git = "https://github.com/pistondevelopers/event"

[dependencies.sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.opengl_graphics]
git = "https://github.com/pistondevelopers/opengl_graphics"

[dependencies.graphics]
git = "https://github.com/pistondevelopers/graphics"

[dependencies.string_telephone]
git = "https://github.com/AngryLawyer/string-telephone.git"

[dependencies.conrod]
git = "https://github.com/PistonDevelopers/conrod.git"
